# IPCDNNwalk

./: .gitignore  BoxFall.py  LICENSE  README.md  SceneEditor.py  TAGS  requirements_SRB2023.txt  runLua.py  testBVHload.py  testBVHload_timeline.py  testBallThrow.py  testBallThrow_genesis.py  testBallThrow_mujoco.py  testBoxFall.py  testBoxFall_genesis.py  testBoxFall_mujoco.py  testConversion.py  testDebugDraw.py  testFBXimport.py  testIK_torch_kinematics_using_mjcf.py  testRagdoll.py  testRagdoll_genesis.py  testRagdoll_mujoco.py  testRagdoll_mujoco2.py  testRobotFileLoading.py  testSMPL_amass.py  testSMPL_compare.py  testSMPL_lowlevelAPI.py  testSMPL_trumans.py  testTable.py  testTerrainPick.py  testTerrainRayCheck_mujoco.py  testWidgets.py  walk_FlexLoco2020.py  walk_SRB2023.py  walk_SRBTrack2025.py  walk_SRBTrack2025_terrain_singlethreaded.py  walk_SRBTrack2025_train_delta.py  walk_TrackSRB2025.py
src/: CMakeLists.txt  GA_simple.cpp  GA_simple.h  MLExport.h  MainlibPython.cpp  MainlibPython.h  Makefile  PythonExtendWin.cpp  PythonExtendWin.h  eigenTest.cpp  luna_QP.cpp  luna_QP.lua  main.cpp  main.h  profile.h  stdafx.h  test.cpp
src/QP_controller/: eiquadprog.hpp  quadprog.cpp  quadprog.h  quadprog_qpOASES.cpp
src/QP_controller/qpOASES-3.0beta/: CMakeLists.txt  VERSIONS.txt  build.bat
src/QP_controller/qpOASES-3.0beta/include/: qpOASES.hpp
src/QP_controller/qpOASES-3.0beta/src/: Flipper.cpp  LAPACKReplacement.cpp  QProblem.cpp  QProblemB.cpp  make_linux.mk  make_windows.mk
src/cma/: CMAwrap.cpp  CMAwrap.h  cmaes.c  cmaes.h  cmaes_interface.h  compile  doc.txt  docfunctions.txt  example1.c  example2.c  initials.par  plotcmaesdat.m  readme
src/taesooLib/: Makefile
src/taesooLib/BaseLib/: CMakeLists.txt  baselib.h  resource.h  stdafx.cpp  stdafx.h
src/taesooLib/BaseLib/image/: Image.cpp  Image.h  Image3d.h  ImagePixel.cpp  ImagePixel.h  ImageProcessor.cpp  ImageProcessor.h
src/taesooLib/BaseLib/math/: BSpline.cpp  BSpline.h  DynamicTimeWarping.cpp  DynamicTimeWarping.h  Filter.cpp  Filter.h  Metric.cpp  NumericalSpline.h  Operator.cpp  Operator.h  OperatorQuater.h  OperatorStitch.cpp  OperatorStitch.h  Operator_NR.cpp  Operator_NR.h  analyticSolver.cpp  analyticSolver.h  bitVectorN.cpp  bitVectorN.h  conversion.h  dualQuaternion.cpp  floatvec.cpp  floatvec.h  hyperMatrixN.cpp  hyperMatrixN.h  interval.cpp  intervalN.cpp  intervals.h  mathclass.h  mathclass_minimum.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  matrixn.cpp  matrixn.h  optimize.cpp  optimize.h  quater.cpp  quater.h  (+16 more)
src/taesooLib/BaseLib/motion/: ASFLoader.cpp  ASFLoader.h  BVHLoader.cpp  BVHLoader.h  BoneKinematics.cpp  BoneKinematics.h  COM_IKsolver.h  ConstraintMarking.cpp  FootPrint.h  FromRootToLimbIKsolver.cpp  FromRootToLimbIKsolver.h  FullbodyIK.cpp  FullbodyIK.h  FullbodyIK_MotionDOF.cpp  FullbodyIK_MotionDOF.h  FullbodyIK_MotionDOF_MultiTarget_lbfgs.cpp  Geometry.cpp  Geometry.h  HandIKsolver.cpp  HandIKsolver.h  IKSolver.cpp  IKSolver.h  InertiaCalculator.cpp  Liegroup.cpp  Liegroup.h  LimbIKinfo.h  LimbIKsolver.cpp  LimbIKsolver.h  LimbIKsolver2.cpp  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  Motion.cpp  Motion.h  MotionDOF.cpp  MotionDOF.h  MotionDOFinfo.h  MotionLoader.cpp  MotionLoader.h  (+29 more)
src/taesooLib/BaseLib/unix/: tchar.h
src/taesooLib/BaseLib/utility/: BinaryFile.cpp  BinaryFile.h  Chat.cpp  Chat.h  FileEx.h  GArray.cpp  Graph.h  Parser.cpp  Parser.h  QPerformanceTimer.h  TGL.h  TList.h  TOnlineArray.h  TWord.h  TextFile.cpp  TextFile.h  TypeString.cpp  TypeString.h  checkError.h  checkPoints.cpp  checkPoints.h  configtable.h  namedmapsupport.h  operatorString.h  stdtemplate.h  tfile.cpp  tfile.h  util.cpp  util.h  winerr.h
src/taesooLib/ClassificationLib/: CMakeLists.txt  luna_classification.lua  stdafx.cpp  stdafx.h
src/taesooLib/ClassificationLib/math/: Function.cpp  FuzzyCluster.cpp  FuzzyCluster.h  GnuPlot.cpp  GnuPlot.h  Interpolation.h  KNearestInterpolationFast.cpp  KNearestInterpolationFast.h  LCBInterploator.cpp  LCBInterpolator.h  PCA.H  SVMWrap.cpp  SVMWrap.h  cluster.cpp  cluster.h  statistics.cpp  statistics.h
src/taesooLib/MainLib/: CMakeLists.txt  MainLib.h  MainLib.rc  stdafx.cpp  stdafx.h
src/taesooLib/MainLib/Ogre/: OgreSkinEntity.cpp  OgreSkinEntity.h  OgreSkinSubEntity.cpp  OgreSkinSubEntity.h  PLDPrimCustumSkin.cpp  PLDPrimCustumSkin.h  intersectionTest.h
src/taesooLib/MainLib/OgreFltk/: AnimationObject.cpp  AnimationObject.h  BaseSystem.cpp  BaseSystem.h  (+65 more)
src/taesooLib/PhysicsLib/: CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.h  DynamicsSimulator.cpp  DynamicsSimulator.h  DynamicsSimulator_Bullet.cpp  DynamicsSimulator_UT.cpp  DynamicsSimulator_UT.h  DynamicsSimulator_penaltyMethod.cpp  DynamicsSimulator_penaltyMethod.h  InertiaCalculator.cpp  Liegroup.cpp  Liegroup.inl  Makefile  ModelLoaderUtil_UT.cpp  OpenHRPcommon.cpp  OpenHRPcommon.h  SDRE.cpp  SDRE.h  ScriptBaseWin.cpp  ScriptBaseWin.h  Sensor.h  clapack_wrap.cpp  clapack_wrap.h  dims_common.h  luna_physics.lua  mrdplot.hpp  mrdplotWrap.cpp  physicsLib.h  psim.cpp  psim.h  stdafx.cpp  stdafx.h
src/taesooLib/Samples/: Common.cmake  Common_baselib.cmake  Common_console.cmake  Common_console_mpi.cmake  Common_mainlib.cmake
work/libcalab_ogre3d/: MANIFEST.in  Makefile  README.md  fix_mac.py  install_dependencies.bat  pyproject.toml  setup.py  test_setup.py
work/libcalab_ogre3d/libcalab_ogre3d/: MotionGraph.py  __init__.py  config.py  controlmodule.py  default_settings.py  filechooser.py  filechooser_mac.py  filechooser_wx.py  luamodule.py  rendermodule.py
work/taesooLib/BaseLib/: CMakeLists.txt  baselib.cbp
work/taesooLib/MainLib/: CMakeLists.txt  MainLib.cpp  Resource.h
work/taesooLib/PhysicsLib/: CMakeLists.txt  CollisionDetector.cpp  DynamicsSimulator_Bullet.h  DynamicsSimulator_QP.cpp  DynamicsSimulator_QP.h  DynamicsSimulator_penaltyMethod.cpp  Liegroup.h  ModelLoaderUtil_UT.h  OpenHRPConfig.h  ScriptBaseWin.cpp  ScriptBaseWin.h  Sensor.cpp  World_UT.cpp  World_UT.h  hrpModelExportDef.h  luna_physics.lua  mrdplot.c  mrdplot.h  physicsLib.cpp  stdafx.h
(+1205 files in other folders)
